add JAVA_OPTS for client